// Mon Jan  8 23:14:38 UTC 2018

// Mon Jan  8 22:01:58 UTC 2018
// 4737-a0c-00f- // +cribs +dump_cribs +freq

// +crib +freq  seesaw support skeleton - minor support - somewhat fictional at the moment.

// Wed Jun  7 03:06:13 UTC 2017
// 4735-a0b


2018-01-08
wa1tnr <wa1tnr@users.noreply.github.com>:
	* The 'freq' word runs Fade.ino code and operates
          the LED via PWM on Pin 6 of the Seesaw Breakout.
          This is a success; it means basic Seesaw conversations
          are occurring between the Metro M0 Express target
          board -- from within ainsuForth -- and the Seesaw
          Breakout, via i2c communications (on SDA and SCL)
          and that the Seesaw Breakout is responding appropriately.

          This lays the groundwork to try to get the Seesaw
          Breakout to change the frequency of the PWM carrier,
          away from its default (about 490 Hz?) to another
          value (50 Hz is particularly sought in conjunction
          with control of servo motors that require a 50Hz
          carrier and a 1-3 percent PWM duty cycle (for
          supplying positional information to the servo).

2017-06-07
wa1tnr <wa1tnr@users.noreply.github.com>:
	* Some code moved to src/kernel/ directory.

2017-06-06
wa1tnr <wa1tnr@users.noreply.github.com>:
	* Initial revision