@@ -1,7 +1,7 @@
 
-Tue Jun  6 03:03:57 UTC 2017
+Tue Jan  9 18:46:26 UTC 2018
 
-* Stuart Wood (swood@rochester.rr.com) - 2012
+ * Stuart Wood (swood@rochester.rr.com) - 2012
 
-* Christopher W Hafey, Amateur Radio Station WA1TNR - 2017
+ * Christopher W Hafey, Amateur Radio Station WA1TNR - 2017 (nis)
 
