@@ -1,3 +1,0 @@
-Mon Jan  8 21:29:57 UTC 2018
-
-Replaces 'BROKEN' to indicate the program is believed to be functional.
