@@ -1,0 +1,1 @@
+20692a7fd1175a4ef1c4a0a9d056e3fa  ./seesaw_new_firmware.zip
