@@ -1,17 +1,19 @@
-// Tue Jan  9 04:30:43 UTC 2018
-// 4737-a0c-00j- // +cribs +freq +fade
+// Tue Jan  9 18:46:26 UTC 2018
+// 4737-a0c-00p- // +cribs +freq +fade
+
+// version bump.
+
+// PLISKIN
 
 // BELUGA
 // TEST/EIGHT/seesaw_m0/m0_timer_ainsuForth
 
-// version bump.
-
-
-
 
 // older:
-// Mon Jan  8 23:32:04 UTC 2018
+// Tue Jan  9 04:30:43 UTC 2018
+// 4737-a0c-00j- // +cribs +freq +fade
 
+// Mon Jan  8 23:32:04 UTC 2018
 
 
 // BOKONON
