@@ -1,3 +1,8 @@
+// Tue Jan  9 18:46:26 UTC 2018
+// 4737-a0c-00p- // +cribs +freq +fade
+
+// seesaw issue partially resolved - new firmare exists to correct the problem.
+
 // Mon Jan  8 23:14:38 UTC 2018
 
 // Mon Jan  8 22:01:58 UTC 2018
